test: MM-33 Swtiching to AssertJ from Hamcrest fo CommentGraphTest. Other small test improvements. (#6)
Reviewed-on: http://gitea.local/medical-models/medical-models-service/pulls/6
Co-authored-by: JonathonClifford <jono.cliff@gmail.com>
Co-committed-by: JonathonClifford <jono.cliff@gmail.com>